# address-converter

./: LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  publish.yml  release.yml
src/: __init__.py  batch.py  constants.py  conversion.py  converter.py  normalize.py  text.py  utils.py
src/vietnam_address_converter/: __init__.py  batch.py  cli.py  constants.py  conversion.py  normalize.py  text.py
tests/: conftest.py  test_package_import.py  test_text_parser.py
