[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vietnam-address-converter"
version = "0.1.0"
description = "Convert Vietnamese administrative addresses from the old district-based format to the 2025 normalized structure."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "trng28" }
]
keywords = [
  "vietnam",
  "address",
  "address-normalization",
  "administrative-boundaries",
  "csv",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/trng28/address-converter"
Repository = "https://github.com/trng28/address-converter"
Issues = "https://github.com/trng28/address-converter/issues"
Dataset = "https://huggingface.co/datasets/trucmtnguyen/vietnam-address-collection"

[project.scripts]
vietnam-address-converter = "vietnam_address_converter.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["vietnam_address_converter*"]
